--- a/package.json
+++ b/package.json
@@ -6,8 +6,25 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.5.1",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.31",
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.0.0",
+        "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
+        "@fortawesome/free-regular-svg-icons": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/vue-fontawesome": "^3.0.3",
+        "sweetalert2": "^11.7.32",
+        "vue-router": "^4.2.5"
     }
 }
